assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

$link-color: #6956a2;

/* system typefaces */
$serif      : "PT Serif", Georgia, Times, serif;
$sans-serif : "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
// $sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
$monospace  : Monaco, Consolas, "Lucida Console", monospace;
// Override the $large breakpoint to change when sidebar moves to top
$large: 800px !default;

// Override sidebar width variables to reduce right padding
$right-sidebar-width-narrow: 150px !default;  // Default is 200px
$right-sidebar-width: 250px !default;         // Default is 300px (for larger screens)
$right-sidebar-width-wide: 350px !default;    // Default is 400px (for very large screens)


@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

// Add margin to main content to create space from sidebar
.page__inner-wrap {
  @include breakpoint($large) {
    margin-left: 20px !important; // This matches what works in dev tools
  }
  
  @include breakpoint($x-large) {
    margin-left: 30px !important; // More space on larger screens
  }
}

// https://github.com/mmistakes/minimal-mistakes/issues/1219#issuecomment-326809412
html {
    font-size: 12px; // originally 16px
    @include breakpoint($medium) {
        font-size: 14px; // originally 18px
    }

    @include breakpoint($large) {
        font-size: 16px; // originally 20px
    }

    @include breakpoint($x-large) {
        font-size: 18px; // originally 22px
    }
}

/***** SIDEBAR ******/
.sidebar {
    @include breakpoint($large) {
      opacity: 1;
      -webkit-transition: none;
      transition: none;
    }
}

// .author__avatar {

//   img {
//     max-width: 150px;
//   }
// }

/**
 * Enhanced avatar styles with larger mobile display
 * Replaces the existing .author__avatar section in main.scss
 */
.author__avatar {
  @media (max-width: 800px) {
    width: 180px !important;
    height: 180px !important;
  }

  img {
    // Mobile-first approach: larger by default
    max-width: 160px;
    
    // Scale down for medium screens and up
    @include breakpoint($medium) {
      max-width: 170px;
    }
    
    // Standard size for large screens
    @include breakpoint($large) {
      max-width: 150px;
    }
  }
}

.author__urls {
  a {
    margin-bottom: 0px;
    padding-bottom: 0px;
  }
}

$custom_icon_path: "/assets/images";

.makelab-logo{
  min-width: 16px;
  min-height: 19px;
  // background: url(#{$custom_icon_path}/Logo_MakeabilityLab.png) no-repeat left bottom;
  background: url(#{$custom_icon_path}/MakeabilityLab-Logo-v3-OriginalColors-Cropped.svg);
  background-position: -1px 5px;
  background-repeat: no-repeat;
  background-size: 19px 19px; //https://css-tricks.com/using-svg/
  display: inline-block;
}

/* Hide the "Follow" button on small screens */
@media (max-width: 800px) {
  .author__urls-wrapper .btn {
    display: none;
  }
}

/*** Custom link icons ***/
// See: https://github.com/mmistakes/minimal-mistakes/issues/1529
.create-icon {
  background: url(#{$custom_icon_path}/CREATE_Logo_Black_Square.png) no-repeat left bottom;
}


/** For the footer **/
.footer-logos{
  /* min-width: 800px; */
  /* max-width: 1400px; */
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-gap: 15px;
  // text-align: center;

  // To center content with CSS3 grids, see: https://coryrylan.com/blog/how-to-center-in-css-with-css-grid
  align-items: center;
  align-content: center;
}

.footer-logos img{
  max-height: 60px;
}

// $serif              : "PT Serif", Georgia, Times, serif;
// $sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;

// $global-font-family : $serif;
// $header-font-family : $sans-serif-narrow;

